syntax = "proto3";

option csharp_namespace = "GrpcService1";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc Login (LoginRequest) returns (TokenReply);
}

// The request message containing the user's name.
message LoginRequest {
  string UserName = 1;
  string PassWord = 2;
}

// The response message containing the greetings.
message TokenReply {
  string Token = 1;
}

